@startuml

title __AGENTSYSTEM's Class Diagram__\n

  namespace agentsystem {
    class agentsystem.AgentEvent {
        - agentSystem : AgentSystem<T>
        - increment : long
        - rule : IRule<T>
        + AgentEvent()
        + AgentEvent()
        + execute()
    }
  }
  

  namespace agentsystem {
    abstract class agentsystem.AgentSystem {
        - displayDelegate : IDisplay<T>
        - generation : IGeneration<T>
        - gui : GUISimulator
        - initialGeneration : IGeneration<T>
        - nextGeneration : IGeneration<T>
        + AgentSystem()
        + addEvent()
        + getGeneration()
        + getGui()
        + getNextGeneration()
        + next()
        + restart()
        + setInitialEvents()
        - display()
    }
  }
  

  namespace agentsystem {
    abstract class agentsystem.Generation {
        - nbAgents : int
        + Generation()
        {abstract} + clone()
        {abstract} + get()
        + nbAgents()
    }
  }
  

  namespace agentsystem {
    interface agentsystem.IAgentSystem {
        {abstract} + addEvent()
        {abstract} + getGeneration()
        {abstract} + getGui()
        {abstract} + getNextGeneration()
        {abstract} + setInitialEvents()
    }
  }
  

  namespace agentsystem {
    interface agentsystem.IDisplay {
        {abstract} + display()
    }
  }
  

  namespace agentsystem {
    interface agentsystem.IGeneration {
        {abstract} + clone()
        {abstract} + get()
        {abstract} + nbAgents()
        {abstract} + set()
    }
  }
  

  namespace agentsystem {
    interface agentsystem.IRangeRule {
        {abstract} + agentRange()
    }
  }
  

  namespace agentsystem {
    interface agentsystem.IRule {
        {abstract} + apply()
    }
  }
  

  namespace agentsystem {
    class agentsystem.MultiRuleEntry {
        - eventIncrement : int
        - rule : IRangeRule<T>
        + MultiRuleEntry()
        + eventIncrement()
        + rule()
    }
  }
  

  namespace agentsystem {
    class agentsystem.MultiRuleSystem {
        + MultiRuleSystem()
    }
  }
  

  namespace agentsystem {
    class agentsystem.SingleRuleSystem {
        + SingleRuleSystem()
    }
  }
  

  agentsystem.AgentEvent -up-|> util.Event
  agentsystem.AgentEvent o-- util.Range : range
  agentsystem.AgentSystem .up.|> agentsystem.IAgentSystem
  agentsystem.AgentSystem o-- util.EventManager : eventManager
  agentsystem.Generation .up.|> agentsystem.IGeneration
  agentsystem.MultiRuleSystem -up-|> agentsystem.AgentSystem
  agentsystem.SingleRuleSystem -up-|> agentsystem.AgentSystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
